--- a/src/htmls/login.html
+++ b/src/htmls/login.html
@@ -76,8 +76,8 @@
 						</form>
 
 						<div class="mui-content-padded" style="margin: 0;">
-							<!--<button id='loginbymobile' type="button" class="mui-btn mui-btn-block yck-btn mui-btn-primary yck-btn-login-close" disabled="disabled">登录</button>-->
-							<button id='loginbymobile' type="submit" class="mui-btn mui-btn-block yck-btn mui-btn-primary yck-btn-login-close" disabled="disabled">登录</button>
+							<button id='loginbymobile' type="button" class="mui-btn mui-btn-block yck-btn mui-btn-primary yck-btn-login-close" disabled="disabled">登录</button>
+							
 							<div id='regBtn1' type="button" class="mui-btn mui-btn-blue mui-btn-block mui-btn-outlined">注册</div>
 
 						</div>
